...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UsB-Ij-MWd">
                                        <rect key="frame" x="0.0" y="0.0" width="343" height="50"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" systemColor="systemPinkColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="niH-0m-Dl3">
                                        <rect key="frame" x="0.0" y="70" width="343" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZHj-mj-b7J">
                                        <rect key="frame" x="0.0" y="124" width="343" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PnR-Ef-d53">
                                        <rect key="frame" x="0.0" y="178" width="343" height="40"/>
                                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="7or-iJ-MXx"/>
                                        </constraints>
                                        <state key="normal" title="login">
                                            <color key="titleShadowColor" systemColor="systemBlueColor"/>
                                        </state>
                                        <connections>
                                            <action selector="loginclick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vT9-dd-tgx"/>
                                        </connections>
                                    </button>
...
